examples/neg/patternmatch.effekt
type Foo { Bar(); Baz() }

def main() = {
  val f: Int = 42;
  f match {
    case Bar() => 42
  }
}

type Box[A] { MakeBox(a: A) }

def join(f: Foo) = f match {
  case Bar() => MakeBox(42)
  case Baz() => MakeBox(true)
}